--- a/static/sass/layout.scss
+++ b/static/sass/layout.scss
@@ -10,6 +10,7 @@ body {
 }
 
 #header {
+  width: 100%;
 }
 
 #main {
@@ -23,5 +24,5 @@ body {
 
 #navigation {
   width: 100%;
-	background-color: hsla(133, 100%, 50%, 0.4);
+	background-color: hsla(133, 100%, 50%, 0.0);
 	}
