--- a/static/sass/lcd_pixels.scss
+++ b/static/sass/lcd_pixels.scss
@@ -4,7 +4,9 @@ $nPixels: 10,12,13,15,16,19,20,24,25,29,30,34;
 
 div.lcd-panel {
 	display: flex;
-	// flex-wrap: wrap;
+	width: 100%;
+  justify-content: left;
+
 }
 
 div[class*="character-"] {
